--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>Test<p>
-<p>Test<p>
+<h1>Cooler Math Games</h1>
+<p>This website will have games</p>
+<p>Like pong<p>
 </body>
 </html>
