Changed font size

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Cooler Math Games</h1>
-<h2>About</h2>
+<h2><font size="1">About</font></h2>
 <p>This website will have games</p>
 <p>Like pong<p>
 </body>
