--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
+
 <html>
+
+<head>
+    <title>Cooler Math</title>
+</head>
+
 <body>
 <h1>Cooler Math Games</h1>
 <h2><font size="5">About</font></h2>
@@ -7,4 +13,5 @@
 <p>Like pong<p>
 <p>Is it working?<p>
 </body>
+
 </html>
