--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cooler Math</title>
 </head>
 <body>
-    <h1>Cooler Math Games2</h1>
+    <h1>Cooler Math Games</h1>
 </body>
 
 </html>
