--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<!--This is a comment-->>
+<!--This is a comment-->
+<!--lorem + [Tab] to make sample text-->
 
 <html>
 
@@ -8,7 +9,10 @@
     <title>Cooler Math</title>
 </head>
 <body>
-    <h1><center>Cooler Math Games</center></h1>
+    <h1>Cooler Math Games</h1>
+    <hr>
+    <h2>About</h2>
+    <p>This website will be better than <a href="https://www.coolmath.com">coolmath</a>.</p>
 </body>
 
 </html>
