--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-<!--This is a comment-->
 <!--lorem + [Tab] to make sample text-->
 
 <html>
@@ -12,7 +11,10 @@
     <h1>Cooler Math Games</h1>
     <hr>
     <h2>About</h2>
-    <p>This website will be better than <a href="https://www.coolmath.com">coolmath</a>.</p>
+    <p>
+        This website will be better than <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse website">coolmath</a>.
+    </p>
+    <!--Default target is _self-->
 </body>
 
 </html>
