added link to second page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         This website will be better than <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse website">coolmath</a>.
     </p>
     <!--Default target is _self-->
-    
+    <h2>Games</h2>
+    <a href="pong.html">PONG</a>
 </body>
 
 </html>
