--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </p>
     <!--Default target is _self-->
     <h2>Games</h2>
+    <a href="asteroids.html">Asteroids</a>
+    <br>
     <a href="pong.html">PONG</a>
 </body>
 
