--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <a href="pong.html">PONG</a>
 </body>
 <footer>
-    <p>©Copyright 2096 by Whatagang</p>
+    <p>©Copyright ThisYear by Me</p>
 </footer>
 </html>
