--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Cooler Math</title>
 </head>
 <body>
-    <h1>Cooler Math Games</h1>
+    <h1><map name="logo"><area href="index.html" target="_self" title="To home"></map><img usemap="#logo" src="logo.png" alt="Cool logo">Cooler Math Games</h1>
     <hr>
     <h2>About</h2>
     <p>
-        This website will be better than <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse website">coolmath</a>.
+        This website <em>will</em> be <strong>better</strong> than <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse website">coolmath</a>.
     </p>
     <!--Default target is _self-->
     <h2>Games</h2>
