--- a/asteroids.html
+++ b/asteroids.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asteroids | Cooler Math</title>
+    <link href="index.css" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="asteroids.html">Asteroids</a></li>
+            <li><a href="pong.html">PONG</a></li>
+        </ul>
+    </nav>
     <h1>Asteroids</h1>
 </body>
 </html>
