--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <!--lorem + [Tab] to make sample text-->
 
 <html>
-
 <head>
     <title>Cooler Math</title>
+    <link href="index.css" rel="stylesheet">
 </head>
+
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="asteroids.html">Asteroids</a></li>
+            <li><a href="pong.html">PONG</a></li>
+        </ul>
+    </nav>
     <h1><map name="logo"><area href="index.html" target="_self" title="To home"></map><img usemap="#logo" src="logo.png" alt="Cool logo">Cooler Math Games</h1>
     <hr>
     <h2>About</h2>
@@ -20,6 +28,7 @@
     <br>
     <a href="pong.html">PONG</a>
 </body>
+
 <footer>
     <p>©Copyright ThisYear by Me</p>
 </footer>
