--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
-
 <!--lorem + [Tab] to make sample text-->
-
+<html lang="en"></html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooler Math</title>
-    <link href="index.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="asteroids.html">Asteroids</a></li>
-            <li><a href="pong.html">PONG</a></li>
-        </ul>
-    </nav>
-    <h1><map name="logo"><area href="index.html" target="_self" title="To home"></map><img usemap="#logo" src="logo.png" alt="Cool logo">Cooler Math Games</h1>
-    <hr>
-    <h2>About</h2>
-    <p>
-        This website <em>will</em> be <strong>better</strong> than <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse website">coolmath</a>.
-    </p>
-    <!--Default target is _self-->
-    <h2>Games</h2>
-    <a href="asteroids.html">Asteroids</a>
-    <br>
-    <a href="pong.html">PONG</a>
+    <div id="page-container">
+        <div id="content-wrap">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="asteroids.html">Asteroids</a></li>
+                    <li><a href="pong.html">PONG</a></li>
+                </ul>
+            </nav>
+            <h1><map name="logo"><area href="index.html" target="_self" title="To home"></map><img usemap="#logo" src="logo.png" alt="Cool logo">Cooler Math Games</h1>
+            <hr>
+            <h2>About</h2>
+            <p>
+                This website <em>will</em> be <strong>better</strong> than <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse website">coolmath</a>.
+            </p>
+            <!--Default target is _self-->
+            <h2>Games</h2>
+            <a href="asteroids.html">Asteroids</a>
+            <br>
+            <a href="pong.html">PONG</a>
+        </div>
+        <footer id="footer"></footer>
+    </div>
 </body>
 
 <footer>
