added account to nav bar

--- a/account.html
+++ b/account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PONG | Cooler Math</title>
+    <title>Account | Cooler Math</title>
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
@@ -16,6 +16,5 @@
             <li><a href="account.html">Account</a></li>
         </ul>
     </nav>
-    <h1>PONG</h1>
 </body>
 </html>
