--- a/asteroids.html
+++ b/asteroids.html
@@ -13,6 +13,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="asteroids.html">Asteroids</a></li>
             <li><a href="pong.html">PONG</a></li>
+            <li><a href="account.html">Account</a></li>
         </ul>
     </nav>
     <h1>Asteroids</h1>
