--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="asteroids.html">Asteroids</a></li>
                     <li><a href="pong.html">PONG</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
             <h1><map name="logo"><area href="index.html" target="_self" title="To home"></map><img usemap="#logo" src="logo.png" alt="Cool logo">Cooler Math Games</h1>
