--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="asteroids.html">Asteroids</a></li>
                     <li><a href="pong.html">PONG</a></li>
+                    <li><a href="index.html">😎Cooler Math Games🤔</a></li>
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <h1><map name="logo"><area href="index.html" target="_self" title="To home"></map><img usemap="#logo" src="logo.png" alt="Cool logo">Cooler Math Games</h1>
+            <h1>😎Cooler Math Games🤔</h1>
             <hr>
             <h2>About</h2>
             <p>
@@ -38,6 +39,6 @@
 </body>
 
 <footer>
-    <p>©Copyright ThisYear by Me</p>
+    © ThisYear Me. All Rights Reserved.
 </footer>
 </html>
