--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
             <br>
             <a href="pong.html">PONG</a>
         </div>
-        <footer id="footer"></footer>
+        <footer id="footer">
+            Conditions of Use
+            Privacy Notice
+            Interest-Based Ads
+            <br>
+            © 2022-Infinity, Amazon.com, Inc. or its affiliates
+
+        </footer>
     </div>
 </body>
-
-<footer>
-    © ThisYear Me. All Rights Reserved.
-</footer>
 </html>
