--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             Privacy Notice
             Interest-Based Ads
             <br>
-            © 2022-Infinity, Amazon.com, Inc. or its affiliates
+            © 2022-Infinity, Me, Inc. or its affiliates
 
         </footer>
     </div>
