lots of changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--lorem + [Tab] to make sample text-->
 <html lang="en"></html>
 <html>
 <head>
@@ -9,7 +8,6 @@
     <title>Cooler Math</title>
     <link href="main.css" rel="stylesheet">
 </head>
-
 <body>
     <div id="page-container">
         <div id="content-wrap">
@@ -21,11 +19,16 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <h1>😎Cooler Math Games🤔</h1>
+            <div id="title">
+                <h1>😎Cooler Math Games🤔</h1>
+            </div>
             <hr>
             <h2>About</h2>
             <p>
-                This website <em>will</em> be <strong>better</strong> than <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse website">coolmath</a>.
+                This website <em>will</em> be <strong>better</strong> 
+                than <a href="https://www.coolmath.com" 
+                target="_blank" title="This takes you to the worse 
+                website">coolmath</a>.
             </p>
             <!--Default target is _self-->
             <h2>Games</h2>
@@ -34,13 +37,14 @@
             <a href="pong.html">PONG</a>
         </div>
         <footer id="footer">
-            Conditions of Use
-            Privacy Notice
-            Interest-Based Ads
+            <a href="legal.html">Conditions of Use</a>
+            <a href="legal.html">Privacy Notice</a>
+            <a href="legal.html">Interest-Based Ads</a>
             <br>
             © 2022-Infinity, Me, Inc. or its affiliates
-
         </footer>
     </div>
 </body>
 </html>
+
+<!--lorem + [Tab] to make sample text-->
