--- a/pong.html
+++ b/pong.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"></html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,29 @@
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="asteroids.html">Asteroids</a></li>
-            <li><a href="pong.html">PONG</a></li>
-            <li><a href="account.html">Account</a></li>
-        </ul>
-    </nav>
-    <h1>PONG</h1>
+    <div id="page-container">
+        <div id="content-wrap">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="asteroids.html">Asteroids</a></li>
+                    <li><a href="pong.html">PONG</a></li>
+                    <li><a href="account.html">Account</a></li>
+                </ul>
+            </nav>
+            <h1>
+                PONG
+                <br><hr>
+                <div id="start">START</div>
+            </h1>
+        </div>
+        <footer id="footer">
+            <a href="legal.html">Conditions of Use</a>
+            <a href="legal.html">Privacy Notice</a>
+            <a href="legal.html">Interest-Based Ads</a>
+            <br>
+            © 2022-Infinity, Me, Inc. or its affiliates
+        </footer>
+    </div>
 </body>
 </html>
