--- a/legal.html
+++ b/legal.html
@@ -1,3 +1,4 @@
+<!-- Hello Inspect Element :D -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,6 @@
     <title>Cooler Math | Legal</title>
 </head>
 <body>
-    <p><iframe style="width: 100%; height: 100px; overflow: show;" src="https://statutes.capitol.texas.gov/" width="100" height="100" scrolling="yes">Iframes not supported</iframe></p>
+    <iframe style="width: 100%; height: 1000px; overflow: show;" src="https://www.coolmath.com" width="100" height="100" scrolling="no">Iframes not supported</iframe>
 </body>
 </html>
