--- a/legal.html
+++ b/legal.html
@@ -8,6 +8,6 @@
     <title>Cooler Math | Legal</title>
 </head>
 <body>
-    <iframe style="width: 100%; height: 1000px; overflow: show;" src="https://www.coolmath.com" width="100" height="100" scrolling="no">Iframes not supported</iframe>
+    <iframe style="width: 100%; height: 1000px; overflow: show;" src="" width="100" height="100" scrolling="no">Iframes not supported</iframe>
 </body>
 </html>
