--- a/asteroids.html
+++ b/asteroids.html
@@ -31,7 +31,7 @@
             <a href="legal.html">Privacy Notice</a>
             <a href="legal.html">Interest-Based Ads</a>
             <br>
-            © 2022-Infinity, Me, Inc. or its affiliates
+            © 2022-Infinity, Me, Inc. or my affiliates
         </footer>
     </div>
 </body>
