--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div id="page-container">
         <div id="content-wrap">
             <nav>
-                <ul>
+                <ul id="rcorners1">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="asteroids.html">Asteroids</a></li>
                     <li><a href="pong.html">PONG</a></li>
-                    <li><a href="account.html">Account</a></li>
+                    <li id="account"><a href="account.html">Account</a></li>
                 </ul>
             </nav>
             <div id="title">
@@ -26,7 +26,8 @@
             <hr>
             <h2>About</h2>
             <p>
-                This website <em>will</em> be <strong>better</strong> 
+                This website <i>will</i> <!-- <i> is the same as <em> -->
+                be <b>better</b> <!-- <b> is the same as <strong> -->
                 than <a href="https://www.coolmath.com" 
                 target="_blank" title="This takes you to the worse 
                 website">coolmath</a>.
@@ -38,11 +39,13 @@
             <a href="pong.html">PONG</a>
         </div>
         <footer id="footer">
+            <!--
             <a href="legal.html">Conditions of Use</a>
             <a href="legal.html">Privacy Notice</a>
             <a href="legal.html">Interest-Based Ads</a>
-            <br>
-            © 2022-Infinity, Me, Inc. or my affiliates
+            -->
+            <br>Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and privacy policy as well as our <a href="legal.html">legal</a> page.
+            <br>Copyright 2022-infinity by Me. All Rights Reserved.
         </footer>
     </div>
 </body>
