--- a/pong.html
+++ b/pong.html
@@ -13,11 +13,11 @@
     <div id="page-container">
         <div id="content-wrap">
             <nav>
-                <ul>
+                <ul id="rcorners1">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="asteroids.html">Asteroids</a></li>
                     <li><a href="pong.html">PONG</a></li>
-                    <li><a href="account.html">Account</a></li>
+                    <li id="account"><a href="account.html">Account</a></li>
                 </ul>
             </nav>
             <h1>
@@ -27,11 +27,13 @@
             </h1>
         </div>
         <footer id="footer">
+            <!--
             <a href="legal.html">Conditions of Use</a>
             <a href="legal.html">Privacy Notice</a>
             <a href="legal.html">Interest-Based Ads</a>
-            <br>
-            © 2022-Infinity, Me, Inc. or my affiliates
+            -->
+            <br>Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and privacy policy as well as our <a href="legal.html">legal</a> page.
+            <br>Copyright 2022-infinity by Me. All Rights Reserved.
         </footer>
     </div>
 </body>
