--- a/account.html
+++ b/account.html
@@ -21,7 +21,8 @@
                 </ul>
             </nav>
             <h1>
-                Account <hr>
+                Account
+                <hr>
             </h1>
         </div>
         <footer id="footer">
@@ -30,7 +31,10 @@
             <a href="legal.html">Privacy Notice</a>
             <a href="legal.html">Interest-Based Ads</a>
             -->
-            <br>Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and privacy policy as well as understanding our <a href="legal.html">legal</a> page.
+            <br>Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad
+            gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all
+            content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and
+            privacy policy as well as understanding our <a href="legal.html">legal</a> page.
             <br>Copyright 2022-infinity by Me. All Rights Reserved.
         </footer>
     </div>
