--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <p>
                 This website <i>will</i> <!-- <i> is the same as <em> -->
                 be <b>better</b> <!-- <b> is the same as <strong> -->
-                than <a href="https://www.coolmath.com" 
-                target="_blank" title="This takes you to the worse 
+                than <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse 
                 website">coolmath</a>.
             </p>
             <!--Default target is _self-->
@@ -44,7 +43,10 @@
             <a href="legal.html">Privacy Notice</a>
             <a href="legal.html">Interest-Based Ads</a>
             -->
-            <br>Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and privacy policy as well as understanding our <a href="legal.html">legal</a> page.
+            <br>Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad
+            gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all
+            content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and
+            privacy policy as well as understanding our <a href="legal.html">legal</a> page.
             <br>Copyright 2022-<div style="font-size: large">∞</div> by Me. All Rights Reserved.
         </footer>
     </div>
