--- a/legal.html
+++ b/legal.html
@@ -22,6 +22,30 @@
             background-color: black;
             border: 2px solid #D65A31;
         }
+
+        /* unvisited link */
+        a:link {
+            color: black;
+            text-decoration: none;
+        }
+
+        /* visited link */
+        a:visited {
+            color: black;
+            text-decoration: none;
+        }
+
+        /* mouse over link */
+        a:hover {
+            color: black;
+            text-decoration: none;
+        }
+
+        /* selected link */
+        a:active {
+            color: black;
+            text-decoration: none;
+        }
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +55,11 @@
 </head>
 <body>
     <div class="sticky" style="text-align: center">😎Cooler Math Games🤔</div>
-    <h1>My code is my code, which means the code is mine, but if you want to borrow some, I'll allow it.</h1>
+    <h1>My <a href="https://github.com/Trebo04/Cooler_Math" target="_blank"><span style="cursor:text">code</span></a> is my <a
+            href="https://github.com/Trebo04/Cooler_Math" target="_blank"><span style="cursor:text">code</span></a>, which means the
+        <a href="https://github.com/Trebo04/Cooler_Math" target="_blank"><span style="cursor:text">code</span></a> is mine, but if
+        you want to borrow some, I'll allow it.
+    </h1>
     <hr><br>
     <h1>More legal stuff :D</h1>
     <p style="text-indent: 0ex; text-align: center">EDUCATION CODE</p>
