--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="asteroids.html">Asteroids</a></li>
                     <li><a href="pong.html">PONG</a></li>
-                    <li id="account"><a href="account.html">Account</a></li>
+                    <li style="float: right"><a href="account.html">Account</a></li>
                 </ul>
             </nav>
             <div id="title">
-                <h1>😎Cooler Math Games🤔</h1>
+                <h1>😎Cooler Math Games<span style="cursor:wait">🤔</span></h1>
             </div>
             <hr>
             <h2>About</h2>
@@ -33,9 +33,10 @@
             </p>
             <!--Default target is _self-->
             <h2>Games</h2>
-            <a href="asteroids.html">Asteroids</a>
-            <br>
-            <a href="pong.html">PONG</a>
+            <ol>
+                <li><a href="asteroids.html">Asteroids</a></li>
+                <li><a href="pong.html">PONG</a></li>
+            </ol>
         </div>
         <footer id="footer">
             <!--
@@ -47,7 +48,7 @@
             gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all
             content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and
             privacy policy as well as understanding our <a href="legal.html">legal</a> page.
-            <br>Copyright 2022-<div style="font-size: large">∞</div> by Me. All Rights Reserved.
+            <br>Copyright 2022-<span style="color: #d65a31; font-size: small;">∞</span> by Me. All Rights Reserved.
         </footer>
     </div>
 </body>
