--- a/pong.html
+++ b/pong.html
@@ -17,13 +17,12 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="asteroids.html">Asteroids</a></li>
                     <li><a href="pong.html">PONG</a></li>
-                    <li id="account"><a href="account.html">Account</a></li>
+                    <li style="float: right"><a href="account.html">Account</a></li>
                 </ul>
             </nav>
             <h1>
                 PONG
-                <br>
-                <hr>
+                <br><hr>
                 <div id="start">START</div>
             </h1>
         </div>
@@ -37,7 +36,7 @@
             gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all
             content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and
             privacy policy as well as understanding our <a href="legal.html">legal</a> page.
-            <br>Copyright 2022-infinity by Me. All Rights Reserved.
+            <br>Copyright 2022-<span style="color: #d65a31; font-size: small;">∞</span> by Me. All Rights Reserved.
         </footer>
     </div>
 </body>
