--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <a href="legal.html">Privacy Notice</a>
             <a href="legal.html">Interest-Based Ads</a>
             -->
-            <br>Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad
-            gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all
-            content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and
-            privacy policy as well as understanding our <a href="legal.html">legal</a> page.
+            Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad
+            gamers. Games are constantly reviewed to avoid errors, but I cannot warrant full correctness of all
+            content. While using Cooler Math Games, you agree to have read and accepted my terms of use, cookie and
+            privacy policy as well as understanding my <a href="legal.html">legal</a> page.
             <br>Copyright 2022-<span style="color: #d65a31; font-size: small;">∞</span> by Me. All Rights Reserved.
         </footer>
     </div>
