--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cooler Math</title>
+    <link rel="icon" type="image/png" href="png/icon.png">
     <link href="main.css" rel="stylesheet">
+    <title>Cooler Math</title>
 </head>
 <body>
     <div id="page-container">
