--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="png/test.png">
-    <link rel="apple-touch-icon" sizes="128x128" href="png/test.png">
+    <link rel="shortcut icon" type="image/png" href="png/test.png"/>
+    <link rel="apple-touch-icon" sizes="128x128" href="png/test.png"/>
     <link href="main.css" rel="stylesheet">
     <title>Cooler Math</title>
 </head>
