--- a/pong.html
+++ b/pong.html
@@ -1,13 +1,13 @@
 <!-- Hello Inspect Element :D -->
 <!DOCTYPE html>
-<html lang="en"></html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asteroids | Cooler Math</title>
+    <link rel="icon" href="png/icon.png">
     <link href="main.css" rel="stylesheet">
+    <title>PONG | Cooler Math</title>
 </head>
 <body>
     <div id="page-container">
