--- a/legal.html
+++ b/legal.html
@@ -50,8 +50,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cooler Math | Legal</title>
+    <link rel="icon" href="png/icon.png">
     <link href="" rel="stylesheet">
+    <title>Cooler Math | Legal</title>
 </head>
 <body>
     <div class="sticky" style="text-align: center">😎Cooler Math Games🤔</div>
