--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="png/icon.png"/>
-    <link rel="apple-touch-icon" sizes="128x128" href="png/icon.png"/>
+    <link rel="apple-touch-icon" sizes="128x128" href="png/high_def_icon.png"/>
     <link href="main.css" rel="stylesheet">
     <title>Cooler Math</title>
 </head>
