--- a/html/account.html
+++ b/html/account.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="png/icon.png">
-    <link href="main.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/png/icon.png"/>
+    <link rel="apple-touch-icon" sizes="128x128" href="/png/high_def_icon.png"/>
+    <link href="/css/main.css" rel="stylesheet">
     <title>Account | Cooler Math</title>
 </head>
 <body>
@@ -14,10 +15,10 @@
         <div id="content-wrap">
             <nav>
                 <ul id="rcorners1">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="asteroids.html">Asteroids</a></li>
-                    <li><a href="pong.html">PONG</a></li>
-                    <li style="float: right"><a href="account.html">Account</a></li>
+                    <li><a href="/html/index.html">Home</a></li>
+                    <li><a href="/html/asteroids.html">Asteroids</a></li>
+                    <li><a href="/html/pong.html">PONG</a></li>
+                    <li style="float: right"><a href="/html/account.html">Account</a></li>
                 </ul>
             </nav>
             <h1>
@@ -27,14 +28,14 @@
         </div>
         <footer id="footer">
             <!--
-            <a href="legal.html">Conditions of Use</a>
-            <a href="legal.html">Privacy Notice</a>
-            <a href="legal.html">Interest-Based Ads</a>
+            <a href="/html/legal.html">Conditions of Use</a>
+            <a href="/html/legal.html">Privacy Notice</a>
+            <a href="/html/legal.html">Interest-Based Ads</a>
             -->
             <br>Cooler Math Games is optimized for gaming by gamers. Games might be simplified to improve gaming for bad
             gamers. Games are constantly reviewed to avoid errors, but we cannot warrant full correctness of all
             content. While using Cooler Math Games, you agree to have read and accepted our terms of use, cookie and
-            privacy policy as well as understanding our <a href="legal.html">legal</a> page.
+            privacy policy as well as understanding our <a href="/html/legal.html">legal</a> page.
             <br>Copyright 2022-<span style="color: #d65a31; font-size: small;">∞</span> by Me. All Rights Reserved.
         </footer>
     </div>
