--- a/html/legal.html
+++ b/html/legal.html
@@ -50,7 +50,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="png/icon.png">
+    <link rel="icon" type="image/png" href="/png/icon.png"/>
+    <link rel="apple-touch-icon" sizes="128x128" href="/png/high_def_icon.png"/>
     <link href="" rel="stylesheet">
     <title>Cooler Math | Legal</title>
 </head>
@@ -120,6 +121,6 @@
         performance in the understanding of social studies.</p>
     <p style="text-indent: 0ex;">Added by Acts 1995, 74th Leg., ch. 260, Sec. 1, eff. May 30, 1995.</p>
     <hr>
-    <h1 style="text-align: center"><a style="color: #D65A31" href="index.html">return home</a></h1>
+    <h1 style="text-align: center"><a style="color: #D65A31" href="/html/index.html">return home</a></h1>
 </body>
 </html>
