changed index file path

--- a/html/legal.html
+++ b/html/legal.html
@@ -121,6 +121,6 @@
         performance in the understanding of social studies.</p>
     <p style="text-indent: 0ex;">Added by Acts 1995, 74th Leg., ch. 260, Sec. 1, eff. May 30, 1995.</p>
     <hr>
-    <h1 style="text-align: center"><a style="color: #D65A31" href="/html/index.html">return home</a></h1>
+    <h1 style="text-align: center"><a style="color: #D65A31" href="index.html">return home</a></h1>
 </body>
 </html>
