--- a/html/account.html
+++ b/html/account.html
@@ -15,7 +15,7 @@
         <div id="content-wrap">
             <nav>
                 <ul id="rcorners1">
-                    <li><a href="/html/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="/html/asteroids.html">Asteroids</a></li>
                     <li><a href="/html/pong.html">PONG</a></li>
                     <li style="float: right"><a href="/html/account.html">Account</a></li>
