--- a/html/pong.html
+++ b/html/pong.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/png/icon.png"/>
     <link rel="apple-touch-icon" sizes="128x128" href="/png/high_def_icon.png"/>
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <title>PONG | Cooler Math</title>
 </head>
 <body>
