--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul id="rcorners1">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="../html/asteroids.html">Asteroids</a></li>
+                    <li><a href="html/asteroids.html">Asteroids</a></li>
                     <li><a href="/html/pong.html">PONG</a></li>
                     <li style="float: right"><a href="/html/account.html">Account</a></li>
                 </ul>
