--- a/html/index.html
+++ b/html/index.html
@@ -34,8 +34,7 @@
                 be <b>better</b>
                 <!-- <b> is the same as <strong> -->
                 than
-                <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse 
-                website">coolmath</a>.
+                <a href="https://www.coolmath.com" target="_blank" title="This takes you to the worse website">coolmath</a>.
             </p>
             <!--Default target is _self-->
             <h2>Games</h2>
@@ -45,11 +44,11 @@
             </ol>
         </div>
         <footer id="footer">
-            <!--
-            <a href="/html/legal.html">Conditions of Use</a>
-            <a href="/html/legal.html">Privacy Notice</a>
-            <a href="/html/legal.html">Interest-Based Ads</a>
-            -->
+<!--
+<a href="/html/legal.html">Conditions of Use</a>
+<a href="/html/legal.html">Privacy Notice</a>
+<a href="/html/legal.html">Interest-Based Ads</a>
+-->
             Cooler Math Games is optimized for gaming by gamers. Games might be
             simplified to improve gaming for bad gamers. Games are constantly
             reviewed to avoid errors, but I cannot warrant full correctness of all
