changed color from #d65a31 to aqua

--- a/html/legal.html
+++ b/html/legal.html
@@ -19,9 +19,9 @@
             position: sticky;
             top: 0;
             padding: 5px;
-            color: #d65a31;
+            color: aqua;
             background-color: black;
-            border: 2px solid #d65a31;
+            border: 2px solid aqua;
         }
 
         /* unvisited link */
@@ -196,7 +196,7 @@
     </p>
     <hr />
     <h1 style="text-align: center">
-        <a style="color: #d65a31" href="index.html">return home</a>
+        <a style="color: aqua" href="index.html">return home</a>
     </h1>
 </body>
 
