--- a/html/asteroids.html
+++ b/html/asteroids.html
@@ -42,7 +42,7 @@
       content. While using Cooler Math Games, you agree to have read and
       accepted our terms of use, cookie and privacy policy as well as
       understanding our <a href="/html/legal.html">legal</a> page.
-      <br />Copyright 2022-<span style="color: #d65a31; font-size: small">∞</span>
+      <br />Copyright 2022-<span style="color: aqua; font-size: small">∞</span>
       by Me. All Rights Reserved.
     </footer>
   </div>
