--- a/html/account.html
+++ b/html/account.html
@@ -3,6 +3,87 @@
 <html lang="en">
 
 <head>
+    <style>
+        /* Bordered form */
+        form {
+            border: 3px solid #f1f1f1;
+            background-color: white;
+            color: black;
+        }
+
+        form a {
+            color:black;
+        }
+
+        /* Full-width inputs */
+        input[type=text],
+        input[type=password] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        /* Set a style for all buttons */
+        button {
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        /* Add a hover effect for buttons */
+        button:hover {
+            opacity: 0.8;
+        }
+
+        /* Extra style for the cancel button (red) */
+        .cancelbtn {
+            width: auto;
+            padding: 10px 18px;
+            background-color: #f44336;
+        }
+
+        /* Center the avatar image inside this container */
+        .imgcontainer {
+            text-align: center;
+            margin: 24px 0 12px 0;
+        }
+
+        /* Avatar image */
+        img.avatar {
+            width: 40%;
+            border-radius: 50%;
+        }
+
+        /* Add padding to containers */
+        .container {
+            padding: 16px;
+        }
+
+        /* The "Forgot password" text */
+        span.psw {
+            float: right;
+            padding-top: 16px;
+        }
+
+        /* Change styles for span and cancel button on extra small screens */
+        @media screen and (max-width: 300px) {
+            span.psw {
+                display: block;
+                float: none;
+            }
+
+            .cancelbtn {
+                width: 100%;
+            }
+        }
+    </style>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,13 +110,36 @@
                 Account
                 <hr />
             </h1>
+            <form action="action_page.php" method="post">
+                <div class="imgcontainer">
+                    <img src="/png/high_def_icon.png" alt="Avatar" class="avatar">
+                </div>
+
+                <div class="container">
+                    <label for="uname"><b>Username</b></label>
+                    <input type="text" placeholder="Enter Username" name="uname" required>
+
+                    <label for="psw"><b>Password</b></label>
+                    <input type="password" placeholder="Enter Password" name="psw" required>
+
+                    <button type="submit">Login</button>
+                    <label>
+                        <input type="checkbox" unchecked="unchecked" name="remember"> Remember me
+                    </label>
+                </div>
+
+                <div class="container" style="background-color:#f1f1f1">
+                    <button type="button" class="cancelbtn">Cancel</button>
+                    <span class="psw">Forgot <a href="#">password?</a></span>
+                </div>
+            </form>
         </div>
-        <footer id="footer">
-<!--
+        <!--<footer id="footer">
+            
 <a href="/html/legal.html">Conditions of Use</a>
 <a href="/html/legal.html">Privacy Notice</a>
 <a href="/html/legal.html">Interest-Based Ads</a>
--->
+
             <br />Cooler Math Games is optimized for gaming by gamers. Games might
             be simplified to improve gaming for bad gamers. Games are constantly
             reviewed to avoid errors, but we cannot warrant full correctness of all
@@ -44,7 +148,7 @@
             understanding our <a href="/html/legal.html">legal</a> page.
             <br />Copyright 2022-<span style="color: aqua; font-size: small">∞</span>
             by Me. All Rights Reserved.
-        </footer>
+        </footer>-->
     </div>
 </body>
 
