--- a/html/account.html
+++ b/html/account.html
@@ -24,17 +24,19 @@
             display: inline-block;
             border: 1px solid #ccc;
             box-sizing: border-box;
+            border-radius: 25px;
         }
 
         /* Set a style for all buttons */
         button {
-            background-color: #04AA6D;
-            color: white;
+            background-color: aqua;
+            color: black;
             padding: 14px 20px;
             margin: 8px 0;
             border: none;
             cursor: pointer;
             width: 100%;
+            border-radius: 25px;
         }
 
         /* Add a hover effect for buttons */
@@ -57,7 +59,7 @@
 
         /* Avatar image */
         img.avatar {
-            width: 40%;
+            width: 20%;
             border-radius: 50%;
         }
 
