--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/png/icon.png" />
     <link rel="apple-touch-icon" sizes="128x128" href="/png/high_def_icon.png" />
-    <link href="main.css" rel="stylesheet" />
+    <link href="/css/main.css" rel="stylesheet" />
     <title>Cooler Math</title>
 </head>
 
@@ -38,10 +38,8 @@
             </p>
             <!--Default target is _self-->
             <h2>Games</h2>
-            <ol>
-                <li><a href="asteroids.html">Asteroids</a></li>
-                <li><a href="pong.html">PONG</a></li>
-            </ol>
+            <li><a href="asteroids.html">Asteroids</a></li>
+            <li><a href="pong.html">PONG</a></li>
         </div>
         <footer id="footer">
 <!--
