--- a/test.html
+++ b/test.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <iframe src="NotGalaga.jar" title="game" width="200px" height="200px"></iframe>
 </body>
 </html>
