--- a/html/pong.html
+++ b/html/pong.html
@@ -36,11 +36,11 @@
                 <hr />
                 <!--<div id="start">START</div>-->
                 <div id="gameContainer">
-                    <canvas id="gameBoard" width="500" height="500"></canvas>
+                    <canvas id="gameBoard" width="1250" height="600"></canvas>
                     <div id="scoreText">0 : 0</div>
                     <button id="resetBtn" style="font-family: customfont">RESET</button>
                 </div>
-                <script src="index_pong.js"></script>
+                <script src="/javascript/pong.js"></script>
             </h1>
             <br><br><br>
         </div>
