--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="asteroids.html">Asteroids</a></li>
                     <li><a href="pong.html">PONG</a></li>
-                    <li style="float: right"><a href="account.html">Account</a></li>
+                    <li style="float: right"><a href="account.html">Account<br>Name</a></li>
                 </ul>
             </nav>
             <div id="title">
